--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,4 @@
-# This is the official list of go-ethereum authors for copyright purposes.
-
+fly31318 <fly31318@gmail.com>
 Afri Schoedon <5chdn@users.noreply.github.com>
 Agustin Armellini Fischer <armellini13@gmail.com>
 Airead <fgh1987168@gmail.com>
